style: style button trailer

--- a/src/app/movie/[id]/movie.style.scss
+++ b/src/app/movie/[id]/movie.style.scss
@@ -43,6 +43,16 @@
                     font-weight: 600;
                 }
             }
+
+            .box-button {
+                margin-top: 3rem;
+
+                .pi-caret-right {
+                    border-radius: 50%;
+                    border: 1px #000 solid;
+                    padding: 4px 4px;
+                }
+            }
         }
     }
 }
