--- a/src/app/shared/components/cast/cast.style.scss
+++ b/src/app/shared/components/cast/cast.style.scss
@@ -5,6 +5,7 @@
     .cast-box {
         padding: 4rem 1rem;
         margin: 0 auto;
+        z-index: 10; 
 
         h2 {
             font-size: 2.25rem;
