style: styles refactor

--- a/src/app/movie/[id]/movie.style.scss
+++ b/src/app/movie/[id]/movie.style.scss
@@ -9,6 +9,7 @@
         .movie-image {
             img {
                 width: 16rem;
+                border-radius: .6rem;
             }
         }
 
