--- a/src/app/shared/components/imageMovie/imageMovie.style.scss
+++ b/src/app/shared/components/imageMovie/imageMovie.style.scss
@@ -10,6 +10,11 @@
 
         .image {
             margin-top: 2rem;
+            
+            img {
+                border-radius: .6rem;
+                max-width: 80%;
+            }
         }
     }
 }
