--- a/src/app/shared/components/cast/cast.style.scss
+++ b/src/app/shared/components/cast/cast.style.scss
@@ -5,11 +5,39 @@
     .cast-box {
         padding: 4rem 1rem;
         margin: 0 auto;
-        z-index: 10; 
+        z-index: 10;
 
         h2 {
             font-size: 2.25rem;
             font-weight: 600;
+        }
+
+        .slider-box {
+
+            .cast {
+                margin-top: 2rem;
+
+                a {
+                    img {
+                        border-radius: .6rem;
+                    }
+                }
+
+                .info-cast {
+                    margin-top: .5rem;
+
+                    a {
+                        font-size: 1.125rem;
+                        line-height: 1.75rem;
+                        margin-top: .5rem;
+                    }
+
+                    div {
+                        font-size: .875rem;
+                        line-height: 1.25rem;
+                    }
+                }
+            }
         }
     }
 }
