--- a/src/app/shared/components/actors/actors.style.scss
+++ b/src/app/shared/components/actors/actors.style.scss
@@ -45,12 +45,18 @@
 @media(max-width: 767px) {
     .movie-cast {
         .cast-box {
+            text-align: center;
+
             .slider-box {
                 .cast {
                     display: flex !important;
                     flex-direction: column !important;
                     align-items: center !important;
                     justify-content: center !important;
+
+                    a {
+                        text-decoration: underline;
+                    }
                 }
             }
         }
