--- a/src/app/styles/home.style.scss
+++ b/src/app/styles/home.style.scss
@@ -22,3 +22,11 @@
         }
     }
 }
+
+@media(max-width: 767px) {
+    .box {
+        section {
+            text-align: center;
+        }
+    }
+}
