--- a/src/app/movie/[id]/movie.style.scss
+++ b/src/app/movie/[id]/movie.style.scss
@@ -23,3 +23,9 @@ p {
 .box-button {
     margin-top: 3rem;
 }
+
+@media(max-width: 767px) {
+    .detail-genre-date {
+        justify-content: center;
+    }
+}
