--- a/src/app/movie/[id]/movie.style.scss
+++ b/src/app/movie/[id]/movie.style.scss
@@ -24,6 +24,37 @@ p {
     margin-top: 3rem;
 }
 
+.button-close {
+    display: flex;
+    justify-content: flex-end;
+    padding: .5rem 1rem 0 0;
+
+    button {
+        font-size: 1.875rem;
+        line-height: 1;
+
+    }
+}
+
+.modal-body {
+    padding: 2rem 2rem;
+
+    .modal-children {
+        position: relative;
+        overflow: hidden;
+        padding-top: 56.25%;
+
+        iframe {
+            width: 100%;
+            left: 0;
+            top: 0;
+            position: absolute;
+            height: 100%;
+            border: 0;
+        }
+    }
+}
+
 @media(max-width: 767px) {
     .detail-genre-date {
         justify-content: center;
