--- a/src/app/shared/components/modal/modal.styled.scss
+++ b/src/app/shared/components/modal/modal.styled.scss
@@ -17,6 +17,18 @@
         .children {
             background-color: #1a202c;
             border-radius: .25rem;
+
+            .button-close {
+                display: flex;
+                justify-content: flex-end;
+                padding: .5rem 1rem 0 0;
+
+                button {
+                    font-size: 1.875rem;
+                    line-height: 1;
+
+                }
+            }
         }
     }
 }
