--- a/src/app/styles/home.style.scss
+++ b/src/app/styles/home.style.scss
@@ -2,7 +2,7 @@
     padding: 4rem 1rem 0 1rem;
     margin: 0 auto;
 
-    .popular-movies {
+    .popular {
         h2 {
             text-transform: uppercase;
             font-size: 1.125rem;
@@ -11,7 +11,7 @@
         }
     }
 
-    .now-playing-movies {
+    .now-playing {
         padding: 6rem 0;
 
         h2 {
