--- a/src/styles/home.style.scss
+++ b/src/styles/home.style.scss
@@ -2,23 +2,27 @@
     padding: 4rem 1rem 0 1rem;
     margin: 0 auto;
 
-    .popular {
-        h2 {
-            text-transform: uppercase;
-            font-size: 1.125rem;
-            font-weight: 600;
-            color: #f97316;
-        }
-    }
+    .movies-list {
+        .box-select {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 5rem;
 
-    .now-playing {
-        padding: 6rem 0;
+            button {
+                font-weight: 600;
+                padding: 1rem 1.15rem;
+                border-radius: .5rem;
+                transition: background-color 150ms ease-in-out;
+            }
 
-        h2 {
-            text-transform: uppercase;
-            font-size: 1.125rem;
-            font-weight: 600;
-            color: #f97316;
+            .active {
+                background-color: #1a2643;
+
+                &:hover {
+                    background-color: #253567;
+                }
+            }
         }
     }
 }
