--- a/src/styles/home.style.scss
+++ b/src/styles/home.style.scss
@@ -2,7 +2,7 @@
     padding: 4rem 1rem 0 1rem;
     margin: 0 auto;
 
-    .movies-list {
+    .content-list {
         .box-select {
             display: flex;
             justify-content: center;
