fix: centraliza imagem

--- a/src/shared/components/actors/actors.style.scss
+++ b/src/shared/components/actors/actors.style.scss
@@ -17,6 +17,7 @@
 
             .cast {
                 margin-top: 2rem;
+                justify-items: center;
 
                 a {
                     img {
