--- a/src/styles/home.style.scss
+++ b/src/styles/home.style.scss
@@ -79,8 +79,21 @@
 
 @media (max-width: 767px) {
     .box {
-        section {
+        .content-list {
             text-align: center;
+
+            .box-select {
+                display: grid;
+                grid-template-columns: 150px 150px;
+                gap: 0;
+
+                button {
+                    font-weight: 600;
+                    padding: 1rem 1.15rem;
+                    border-radius: var(--border-radius);
+                    transition: background-color 150ms ease-in-out;
+                }
+            }
         }
     }
 }
