--- a/src/shared/components/imageMovie/imageMovie.style.scss
+++ b/src/shared/components/imageMovie/imageMovie.style.scss
@@ -25,12 +25,9 @@
             text-align: center;
 
             .image {
-                span {
-
-                    display: flex !important;
-                    align-items: center;
-                    justify-content: center;
-                }
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
