--- a/src/shared/components/header/header.style.scss
+++ b/src/shared/components/header/header.style.scss
@@ -31,5 +31,13 @@
             background-color: #2d3748;
             border-radius: 10rem;
         }
+
+        .selected-languages {
+            display: flex;
+            align-items: center;
+            gap: .3rem;
+            cursor: pointer;
+        }
+
     }
 }
