--- a/src/shared/components/header/header.style.scss
+++ b/src/shared/components/header/header.style.scss
@@ -21,16 +21,8 @@
         }
     }
 
-    .box-search {
+    .language {
         align-items: center;
-
-        div>input {
-            width: 16rem;
-            font-size: .875rem;
-            padding: .25rem 1rem;
-            background-color: #2d3748;
-            border-radius: 10rem;
-        }
 
         .selected-languages {
             display: flex;
