--- a/src/styles/home.style.scss
+++ b/src/styles/home.style.scss
@@ -32,6 +32,19 @@
                 }
             }
         }
+
+        .box-search {
+            display: flex;
+            justify-content: end;
+            align-items: center;
+
+            input {
+                font-size: .875rem;
+                padding: .25rem 1rem;
+                background-color: #2d3748;
+                border-radius: 10rem;
+            }
+        }
     }
 
     .pagination {
@@ -86,6 +99,10 @@
                 display: grid;
                 grid-template-columns: 150px 150px;
                 gap: 0;
+            }
+
+            .box-search {
+                justify-content: center;
             }
         }
 
