--- a/src/shared/components/banner/banner.style.scss
+++ b/src/shared/components/banner/banner.style.scss
@@ -39,8 +39,10 @@
 
 @media(max-width: 767px) {
     .movie {
+        display: flex;
+        flex-direction: column;
         justify-items: center;
-        justify-content: center;
+        align-items: center;
 
         .detail-movie {
             .specification {
